--- a/src/App.css
+++ b/src/App.css
@@ -15,8 +15,8 @@
     --title-color: hsl(147, 61%, 61%);
     --text-color: hsl(20, 6%, 10%);
     --text-color-light: hsl(0, 2%, 12%);
-    --input-color: hsl(var(--hue-color), 70%, 96%);
-    --body-color: hsl(var(--hue-color), 70%, 99%);
+    --input-color: hsl(var(--hue-color), 50%, 66%);
+    --body-color: hsl(var(--hue-color), 40%, 49%);
     --container-color: #fff;
     --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
     --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
@@ -82,7 +82,7 @@ body {
   margin: 0 0 var(--header-height) 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
-  background-color: var(--body-color);
+  background-color: #2c3e50;
   color: var(--text-color);
 }
 
@@ -141,7 +141,7 @@ img {
   bottom: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: var(--body-color);
+  background-color: transparent;
 }
 /*==================== HOME ====================*/
 .home__container {
@@ -169,6 +169,19 @@ img {
 }
 .home__title {
   font-size: var(--big-font-size);
+  display: block;
+  white-space: nowrap;
+  border-right: 3px solid;
+  width: 16ch;
+
+  animation: writing 3s steps(16), blink .5s infinite step-end alternate;
+  overflow: hidden;
+}
+@keyframes writing {
+  from {width: 0}
+}
+@keyframes blink {
+  50% { border-color: transparent;}
 }
 .home__subtitle {
   font-size: var(--h3-font-size);
@@ -356,6 +369,13 @@ img {
   .about__buttons{
     justify-content: initial;
   }
+  .skills__data {
+    margin: 0;
+  }
+  .skills__list {
+    gap: 1.5rem;
+    grid-template-columns: repeat(5, 1fr);
+  }
   .services__icon {
     font-size: 2rem;
   }
@@ -375,7 +395,7 @@ img {
     background: none;
   }
   .project__container {
-    background-color: var(--first-color-second);
+    background-color: #2d4356;
     border-radius: 1rem;
     padding: 3rem 2.5rem 0;
     grid-template-columns: 1fr max-content;
