--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -28,6 +28,10 @@
     margin-bottom: var(--mb-2-5);
     cursor: pointer;
   }
+  .skills__img {
+    width: 100px;
+  }
+  
   .skills__icon,
   .skills__arrow {
     font-size: 2rem;
@@ -37,6 +41,7 @@
     margin-right: var(--mb-0-75);
   }
   .skills__title {
+    justify-content: center;
     font-size: var(--h3-font-size);
   }
   .skills__subtitle {
@@ -49,18 +54,18 @@
   }
   .skills__list {
     row-gap: 1.5rem;
-    padding-left: 2.7rem;
+    justify-content: center;
   }
   .skills__titles {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     margin-bottom: var(--mb-0-5);
   }
   .skills__name {
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
   }
-  .skills__bar,
+  /* .skills__bar,
   .skills__percentage {
     height: 5px;
     border-radius: .25rem;
@@ -83,4 +88,4 @@
   }
   .skills__react {
     width: 80%;
-  }
+  } */
