--- a/src/components/info/styles/services.css
+++ b/src/components/info/styles/services.css
@@ -5,7 +5,7 @@
   }
   .services__content {
     position: relative;
-    background-color: var(--container-color);
+    background-color: #1d4356;
     padding: 3.5rem .5rem 1.25rem 1.5rem;
     border-radius: .25rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .15);
