--- a/src/components/footer/styles/footer.css
+++ b/src/components/footer/styles/footer.css
@@ -7,7 +7,7 @@
     row-gap: 3.5rem;
   }
   .footer__bg {
-    background-color: var(--first-color-second);
+    background-color: #2d4356;
     padding: 2rem 0 3rem;
   }
   .footer__title {
