--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Ms+Madi&display=swap');
+
 
 /*==================== VARIABLES CSS ====================*/
 :root {
@@ -153,16 +155,24 @@ img {
   align-items: center;
 }
 .home__social {
-  display: grid;
-  grid-template-columns: max-content;
-  row-gap: 1rem;
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
+  padding-left: 3rem;
 }
 .home__social-icon {
-  font-size: 1.25rem;
+  font-size: 2rem;
   color: var(--first-color);
 }
 .home__social-icon:hover {
   color: var(--first-color-alt);
+}
+.home__img {
+  display: flex;
+  justify-content: center;
+}
+.home__img img {
+  width: 120px;
 }
 .home__data {
   grid-column: 1/3;
@@ -272,10 +282,10 @@ img {
   .skills__title {
     font-size: var(--normal-font-size);
   }
-  .services__container {
+  /* .services__container {
     grid-template-columns: max-content;
-    justify-content: center;
-  }
+    justify-content: center; 
+  } */
   .services__content {
     padding-right: 3.5rem;
   }
@@ -424,6 +434,9 @@ img {
   }
   .home__social {
     transform: translateY(-6rem);
+  }
+  .home-img img {
+    width: 200px;
   }
   .portfolio__content {
     column-gap: 5rem;
