--- a/src/assets/styles/project.css
+++ b/src/assets/styles/project.css
@@ -9,13 +9,14 @@
   .portfolio__img {
     width: 265px;
     border-radius: .5rem;
-    justify-items: center;
+    justify-self: center;
   }
   .portfolio__title {
     font-size: var(--h3-font-size);
     margin-bottom: var(--mb-0-5);
   }
   .portfolio__description {
+    text-align: justify;
     margin-bottom: var(--mb-0-75);
   }
   .portfolio__button:hover .button__icon {
