--- a/src/assets/styles/project.css
+++ b/src/assets/styles/project.css
@@ -84,6 +84,11 @@
   .contact__container {
     row-gap: 3rem;
   }
+  .contact__group {
+    display: flex;
+    gap: 1rem;
+    justify-content: space-between;
+  }
   .contact__information {
     display: flex;
     margin-bottom: var(--mb-2);
