--- a/src/assets/styles/project.css
+++ b/src/assets/styles/project.css
@@ -63,7 +63,10 @@
   .project__bg {
     background-color: #2d4356;
     box-shadow: 0 0 5px rgba(128, 128, 128, 0.178);
-    padding-top: 3rem;
+    padding: 3rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
   .project__title {
     font-size: var(--h2-font-size);
@@ -82,12 +85,13 @@
   }
   /*--Contact--*/
   .contact__container {
-    row-gap: 3rem;
+    row-gap: 2rem;
   }
   .contact__group {
     display: flex;
     gap: 1rem;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: flex-start;
   }
   .contact__information {
     display: flex;
