--- a/src/App.css
+++ b/src/App.css
@@ -186,6 +186,12 @@ input {
 .home-img {
   width: 120px;
 }
+.back-img {
+  position: absolute;
+  z-index: -1;
+  width: 250px;
+  height: 290px;
+}
 .home__data {
   grid-column: 1/3;
 }
@@ -386,7 +392,7 @@ input {
     row-gap: 5rem;
   }
   .home__content {
-    padding-top: 3rem;
+    /*padding-top: 3rem;*/
     column-gap: 2rem;
   }
   .about {
@@ -469,6 +475,10 @@ input {
   }
   .home-img {
     width: 200px;
+  }
+  .back-img {
+    width: 520px;
+    height: 450px;
   }
   .skills__img {
     padding: 0;
