--- a/src/App.css
+++ b/src/App.css
@@ -307,9 +307,7 @@ input {
     grid-template-columns: max-content;
     justify-content: center; 
   } */
-  .services__content {
-    padding-right: 3.5rem;
-  }
+
   .services__modal {
     padding: 0 .5rem;
   }
@@ -420,14 +418,19 @@ input {
     gap: 1.5rem;
     grid-template-columns: repeat(3, 1fr);
   }
+  .services__container {
+    justify-content: space-between;
+    flex-direction: row;
+    display: flex;
+  }
+  .services__content {
+    padding: 3.5rem 3.5rem 1.25rem 1.5rem;
+  }
   .services__icon {
     font-size: 2rem;
   }
   .services__modal-content {
     width: 450px;
-  }
-  .portfolio__img {
-    width: 320px;
   }
   .portfolio__content {
     align-items: center;
