--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -34,20 +34,23 @@
     height: 10em;
     padding: 1.5em;
     will-change: filter;
+    transition: 0.5s;
   }
   .skills__img:hover {
-    filter: drop-shadow(0 0 2em #509dbb);
+    filter: drop-shadow(0 0 2em #daf2fb);
+    -moz-box-shadow: 17px 25px 13px 7px rgba(18,18,18,0.68);
+    transform: translateY(-30px);
   }
-  .skills__img .react:hover {
+  .react:hover {
     filter: drop-shadow(0 0 2em #00c8ffaa);
   }
-  .skills__img .html:hover {
+  .html:hover {
     filter: drop-shadow(0 0 2em #ff5e00f5);
   }
-  .skills__img .css:hover {
+  .css:hover {
     filter: drop-shadow(0 0 2em #0044ffaa);
   }
-  .skills__img .java:hover {
+  .java:hover {
     filter: drop-shadow(0 0 2em #fffb00aa);
   }
   
