--- a/src/assets/styles/project.css
+++ b/src/assets/styles/project.css
@@ -3,13 +3,15 @@
     overflow: initial;
   }
   .portfolio__content {
-    padding: 0 2.5rem;
+    padding: 0 3.5rem;
     border: 1px solid transparent;
   }
   .portfolio__img {
     width: 265px;
+    height: 265px;
     border-radius: .5rem;
     justify-self: center;
+    object-fit: contain;
   }
   .portfolio__title {
     font-size: var(--h3-font-size);
