--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,12 @@
     --first-color-second: hsl(var(--hue-color), 90%, 76%);
     --first-color-alt: hsl(162, 100%, 67%);
     --first-color-lighter: hsl(150, 66%, 80%);
-    --title-color: hsl(147, 61%, 61%);
+    --title-color: #fcdd4d;
     --text-color: #89aac3;
     --text-color-light: hsl(0, 2%, 12%);
     --input-color: hsl(var(--hue-color), 50%, 66%);
-    --body-color: #2b4f71;
-    --container-color: #2b4f71;
+    --body-color: #9373b2;
+    --container-color: #684481;
     --scroll-bar-color: hsl(var(--hue-color), 12%, 90%);
     --scroll-thumb-color: hsl(var(--hue-color), 12%, 80%);
 
@@ -84,7 +84,7 @@ body {
   margin: 0 0 var(--header-height) 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
-  background-color: #2c3e50;
+  background-color: var(--body-color);
   color: var(--text-color);
 }
 
@@ -112,12 +112,11 @@ input {
 }
 /*==================== REUSABLE CSS CLASSES ====================*/
 .section {
-  /*padding: 2rem 0 4rem;*/
   width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 .section__title {
@@ -158,11 +157,16 @@ input {
   
 }
 /*==================== HOME ====================*/
+.home {
+  display: flex;
+  justify-content: center;
+}
 .home__container {
   gap: 1rem;
+  display: flex;
+  align-items: center;
 }
 .home__content {
-  grid-template-columns: .5fr 3fr;
   padding-top: 1.5rem;
   align-items: center;
 }
@@ -170,27 +174,34 @@ input {
   display: flex;
   gap: 1rem;
   flex-direction: column;
-  padding: 0 3rem 0 3rem;
+  justify-content: center;
+  /* padding: 0 3rem 0 3rem; */
 }
 .home__social-icon {
-  font-size: 2rem;
-  color: var(--first-color);
+  font-size: 2.5rem;
+  color: var(--container-color);
 }
 .home__social-icon:hover {
-  color: var(--first-color-alt);
+  color: var(--title-color);
 }
-.home__img {
+/* .home__img {
   display: flex;
-  justify-content: center;
+  justify-content: center
+
+} */
+.home__img{
+  display: flex;
+  justify-content: space-around;
 }
 .home-img {
   width: 120px;
 }
 .back-img {
-  position: absolute;
+  background-image: url('/img/blob.svg');
+  background-repeat: no-repeat;
   z-index: -1;
-  width: 250px;
-  height: 290px;
+  position: relative;
+  width: auto;
 }
 .home__data {
   grid-column: 1/3;
@@ -213,12 +224,13 @@ input {
 }
 .home__subtitle {
   font-size: var(--h3-font-size);
-  color: #ddb4af;
+  color: #C1C2C6;
   font-weight: var(--font-medium);
   margin-bottom: var(--mb-0-75);
 }
 .home__description {
   margin-bottom: var(--mb-2);
+  color: #B7C1D8;
 }
 .home__scroll {
   display: none;
@@ -242,7 +254,7 @@ input {
 /*BUTTONS*/
 .button {
   display: inline-block;
-  background-color: var(--first-color);
+  background-color: var(--title-color);
   color: #fff;
   padding: 1rem;
   border-radius: .5rem;
@@ -321,9 +333,7 @@ input {
 }
 /*devices medium*/
 @media (min-width:568px) {
-  .home__content {
-    grid-template-columns: max-content 1fr 1fr;
-  }
+  
   .home__data {
     grid-column: initial;
   }
@@ -333,9 +343,6 @@ input {
   }
   .contact__group {
     flex-direction: row;
-  }
-  .about {
-    padding: 3rem;
   }
   .about__container,
   .portfolio__content,
@@ -387,14 +394,14 @@ input {
     padding-bottom: 2rem;
   }
   .home__container {
-    row-gap: 5rem;
+    flex-direction: row;
   }
   .home__content {
-    /*padding-top: 3rem;*/
-    column-gap: 2rem;
+    display: flex;
+    gap: 5rem;
   }
-  .about {
-    padding: 5rem;
+  .home__img{
+    gap: 5rem;
   }
   .about__container {
     column-gap: 5rem;
@@ -442,7 +449,7 @@ input {
     background: none;
   }
   .project__container {
-    background-color: #2d4356;
+    background-color: var(--container-color);
     border-radius: 1rem;
     padding: 3rem 2.5rem 0;
     grid-template-columns: 1fr max-content;
@@ -476,12 +483,11 @@ input {
   .home__content {
     column-gap: 6rem;
   }
+  .home__data{
+    width: 405px;
+  }
   .home-img {
     width: 200px;
-  }
-  .back-img {
-    width: 520px;
-    height: 450px;
   }
   .skills__img {
     padding: 0;
