--- a/src/assets/styles/project.css
+++ b/src/assets/styles/project.css
@@ -1,6 +1,7 @@
 /*--PORTFOLIO--*/
 .portfolio__container {
-    overflow: initial;
+    overflow-x: scroll;
+    display: flex;
   }
   .portfolio__content {
     padding: 0 3.5rem;
@@ -75,7 +76,8 @@
     text-align: center;
   }
   .project__bg {
-    background-color: #2d4356;
+    background-color: var(--container-color);
+    width: 100%;
     box-shadow: 0 0 5px rgba(128, 128, 128, 0.178);
     padding: 3rem;
     display: flex;
