--- a/src/components/header/styles/header.css
+++ b/src/components/header/styles/header.css
@@ -8,11 +8,11 @@
   }
   .nav__logo, 
   .nav__toggle {
-    color: var(--title-color);
+    color: #ffff;
     font-weight: var(--font-medium);
   }
   .nav__logo:hover {
-    color: var(--first-color);
+    color: var(--title-color);
     cursor: pointer;
   }
   .nav__logo {
@@ -41,11 +41,11 @@
     flex-direction: column;
     align-items: center;
     font-size: var(--small-font-size);
-    color: var(--title-color);
+    color: #ffff;
     font-weight: var(--font-medium);
   }
   .nav__link:hover {
-    color: var(--first-color);
+    color: var(--title-color);
   }
   .nav__icon {
     font-size: 1.2rem;
@@ -56,10 +56,10 @@
     bottom: .5rem;
     font-size: 1.5rem;
     cursor: pointer;
-    color: var(--first-color);
+    color: #ffff;
   }
   .nav__close:hover {
-    color: var(--first-color-alt);
+    color: var(--title-color);
   }
   /* show menu */
   .show-menu{
