--- a/src/components/info/styles/services.css
+++ b/src/components/info/styles/services.css
@@ -5,7 +5,7 @@
   }
   .services__content {
     position: relative;
-    background-color: #1d4356;
+    background-color: var(--body-color);
     padding: 3.5rem .5rem 1.25rem 1.5rem;
     border-radius: .25rem;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .15);
@@ -17,17 +17,19 @@
   .services__icon {
     display: block;
     font-size: 1.5rem;
-    color: var(--first-color);
+    color: #B7C1D8;
     margin-bottom: var(--mb-1);
   }
   .services__title {
     font-size: var(--h3-font-size);
     margin-bottom: var(--mb-1);
     font-weight: var(--font-medium);
+    color: #C1C2C6;
   }
   .services__button {
     cursor: pointer;
     font-size: var(--small-font-size);
+    color: var(--title-color);
   }
   .services__button:hover .button__icon {
     transform: translateX(.25rem);
