--- a/src/assets/styles/project.css
+++ b/src/assets/styles/project.css
@@ -1,24 +1,38 @@
 /*--PORTFOLIO--*/
+.portfolio{
+  height: auto;
+}
 .portfolio__container {
-    overflow-x: scroll;
+    overflow: hidden;
+    flex-wrap: wrap;
     display: flex;
+    justify-content: center;
+    padding: 0 2rem;
+    gap: 1rem;
+  }
+  .portfolio__sub{
+    text-align: center;
   }
   .portfolio__content {
-    padding: 0 3.5rem;
     border: 1px solid transparent;
+    width: 365px;
+    height: 450px; 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
   }
   .portfolio__img {
-    width: 265px;
+    /* width: 265px;
     height: 265px;
     border-radius: .5rem;
     justify-self: center;
-    object-fit: contain;
+    object-fit: contain; */
   }
   .portfolio__title {
     font-size: var(--h3-font-size);
-    margin-bottom: var(--mb-0-5);
   }
   .portfolio__description {
+    font-size: 14px;
     text-align: justify;
     margin-bottom: var(--mb-0-75);
   }
@@ -77,7 +91,7 @@
   }
   .project__bg {
     background-color: var(--container-color);
-    width: 100%;
+    width: 100vw;
     box-shadow: 0 0 5px rgba(128, 128, 128, 0.178);
     padding: 3rem;
     display: flex;
