--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ html {
 }
 
 body {
-  margin: 0 0 var(--header-height) 0;
+  margin: 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
@@ -253,7 +253,7 @@ input {
   font-weight: var(--font-medium);
 }
 .button:hover {
-  background-color: var(--first-color-alt);
+  background-color: var(--container-color);
 }
 .button__icon {
   font-size: 1.25rem;
@@ -281,7 +281,7 @@ input {
   color: var(--first-color);
 }
 .button--white:hover {
-  background-color: #fff;
+  background-color: var(--body-color);
 }
 
 
@@ -332,6 +332,13 @@ input {
   .home__img {
     order: 1;
     justify-self: center;
+  }
+  .portfolio{
+    padding: 2rem;
+  }
+  .project__container{
+    flex-direction: row !important;
+    justify-content: space-evenly;
   }
   .contact__group {
     flex-direction: row;
