--- a/src/assets/styles/home.css
+++ b/src/assets/styles/home.css
@@ -22,6 +22,7 @@
   .about__description {
     text-align: center;
     margin-bottom: var(--mb-2-5);
+    color: #B7C1D8;
   }
   .about__info {
     display: flex;
@@ -33,8 +34,16 @@
     justify-content: center;
   }
   /*--SKILLS--*/
+  .skills{
+    justify-content: center;
+  }
   .skills__container {
-    row-gap: 0;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding: 0 2rem;
+    justify-content: center;
+    overflow: hidden;
   }
   .skills__header {
     display: flex;
@@ -42,9 +51,13 @@
     margin-bottom: var(--mb-2-5);
     cursor: pointer;
   }
+  .skills__content{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
   .skills__img {
-    height: 10em;
-    padding: 1.5em;
+    width: 100px;
     will-change: filter;
     transition: 0.5s;
   }
